ajustando botón de wsp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     	</svg>
 
     	<div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-			<a class="btn" rel="noopener" title="wsp" target="_blank" href="https://wa.me/+554197153863?text=Hola,%20estoy%20interesado%20en%20contactarte por un producto de moppets-curitiba."><i class="bi bi-whatsapp"></i></a>
+			<!--<a class="btn" rel="noopener" title="wsp" target="_blank" href="https://wa.me/+554197153863?text=Hola,%20estoy%20interesado%20en%20contactarte por un producto de moppets-curitiba."><i class="bi bi-whatsapp"></i></a>-->
+			<button class="btn btn py-2 d-flex align-items-center" id="wsp" type="button"><i class="bi bi-whatsapp"></i><span class="visually-hidden">Wsp</span></button>
     	  	<button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)"><svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg><span class="visually-hidden" id="bd-theme-text">Toggle theme</span></button>
     		<ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
     			<li>
@@ -220,5 +221,6 @@
   			</footer>
 		</main>
 		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="./funciones/funciones.js"></script>
     </body>
 </html>
