--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 		<header data-bs-theme="dark">
   			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     			<div class="container-fluid">
-      				<a class="navbar-brand" href="#"><div><img src="../../imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
+      				<a class="navbar-brand" href="#"><div><img src="./imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
       				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         				<span class="navbar-toggler-icon"></span>
       				</button>
       				<div class="collapse navbar-collapse" id="navbarCollapse">
         				<ul class="navbar-nav me-auto mb-2 mb-md-0">
         					<li class="nav-item">
-        						<a class="nav-link active" aria-current="page" href="../../../index.html">Home</a>
+        						<a class="nav-link active" aria-current="page" href="./vistas/galeria.html">Galería</a>
         					</li>
         					<li class="nav-item">
-        						<a class="nav-link" href="#">Link</a>
+        						<a class="nav-link" href="#">Instagram</a>
         					</li>
         					<li class="nav-item">
-        						<a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        						<a class="nav-link disabled" aria-disabled="true">No hacer click aquí</a>
         					</li>
         				</ul>
         				<!--<form class="d-flex" role="search">
@@ -155,21 +155,21 @@
   	  			<!-- Three columns of text below the carousel -->
   	  			<div class="row">
   	    			<div class="col-lg-4">
-						<div><img src="../../imagen/chuchu.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
+						<div><img src="./imagen/chuchu.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    	  			<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    	  			<h2 class="fw-normal">Chuchú</h2>
   	    	  			<p>Una página bien fina en la que vendo cositas.</p>
   	    	  			<!--<p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>-->
   	    			</div><!-- /.col-lg-4 -->
   	    			<div class="col-lg-4">
-						<div><img src="../../imagen/monga.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
+						<div><img src="./imagen/monga.jpg" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    				<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    				<h2 class="fw-normal">Freddy</h2>
   	    				<p>Una vez me hizo una cesta con periódico y duermo bien fino ahí.</p>
   	    				<!--<p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>-->
   	    			</div><!-- /.col-lg-4 -->
   	    			<div class="col-lg-4">
-						<div><img src="../../imagen/pic.png" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
+						<div><img src="./imagen/pic.png" alt="carrusel_1" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"></div>
   	    				<!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
   	    				<h2 class="fw-normal">El firix</h2>
   	    				<p>Vamos a ver cómo queda esta página.</p>
@@ -185,7 +185,7 @@
 						<p class="lead">Toca la imagen para que veas más modelos.</p>
   	  			  	</div>
   	  			  	<div class="col-md-5">
-						<a href="./vistas/seccion_escaleras.html"><img src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_escaleras.html"><img id="brincar_1" src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
 					</div>
   	  			</div>
@@ -196,7 +196,7 @@
   	  					<p class="lead">Las iguanas deben estar en un ambiente adecuado, preferiblemente en los árboles, no las encierres. Gil.</p>
   	  				</div>
   	  				<div class="col-md-5 order-md-1">
-						<a href="./vistas/seccion_casitas.html"><img src="./imagen/productos/casita_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_casitas.html"><img id="brincar_2" src="./imagen/productos/casita_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
   	  				</div>
   	  			</div>
@@ -207,7 +207,7 @@
   	  					<p class="lead">Y sí, cuando tengas esto en tu casa, querrás, sin duda alguna, dos más.</p>
   	  				</div>
   	  				<div class="col-md-5">
-						<a href="./vistas/sección_rascadores.html"><img src="./imagen/productos/wadafac_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/sección_rascadores.html"><img id="brincar_3" src="./imagen/productos/wadafac_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
   	  				</div>
   	  			</div>
@@ -220,6 +220,8 @@
   				<p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   			</footer>
 		</main>
+		<script src="https://unpkg.com/scrollreveal"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="./funciones/funciones.js"></script>
     </body>
