--- a/vistas/seccion_bebederos.html
+++ b/vistas/seccion_bebederos.html
@@ -64,17 +64,17 @@
 		<header data-bs-theme="dark">
   			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     			<div class="container-fluid">
-      				<a class="navbar-brand" href="../index.html"><div><img src="../../../imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
+      				<a class="navbar-brand" href="../index.html"><div><img src="../imagen/logo.jpg" alt="logo" class="logo"> MopetsCuritiba</div></a>
       				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         				<span class="navbar-toggler-icon"></span>
       				</button>
       				<div class="collapse navbar-collapse" id="navbarCollapse">
         				<ul class="navbar-nav me-auto mb-2 mb-md-0">
         					<li class="nav-item">
-        						<a class="nav-link active" aria-current="page" href="../../../index.html">Home</a>
+        						<a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
         					</li>
         					<li class="nav-item">
-        						<a class="nav-link" href="#">Link</a>
+        						<a class="nav-link" href="#">Instagram</a>
         					</li>
         					<li class="nav-item">
         						<a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -96,28 +96,28 @@
             	<h2 class="text-center">Descripción detallada del producto</h2>
             	<div class="container">
 					<div class="card">
-					  <img src="../imagen/productos/comida_1.jpg" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-					  </div>
+						<img src="../imagen/productos/comida_1.jpg" class="card-img-top" alt="...">					  
+						<div class="card-body">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+					  	</div>
 					</div>
 					<div class="card">
-					  <img src="../imagen/productos/comida_2.jpg" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-					  </div>
+					  	<img src="../imagen/productos/comida_2.jpg" class="card-img-top" alt="...">
+					  	<div class="card-body">
+					    	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+					  	</div>
 					</div>
 					<div class="card">
-					  <img src="../imagen/productos/comida_3.jpg" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-					  </div>
+					  	<img src="../imagen/productos/comida_3.jpg" class="card-img-top" alt="...">
+					  	<div class="card-body">
+					    	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+					  	</div>
 					</div>
 					<div class="card">
-					  <img src="../imagen/productos/comida_4.jpg" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-					  </div>
+					  	<img src="../imagen/productos/comida_4.jpg" class="card-img-top" alt="...">
+					  	<div class="card-body">
+					    	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+					  	</div>
 					</div>
             	</div>
 				<div class="navbar-brand">
@@ -145,6 +145,8 @@
   				<p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   			</footer>
 		</main>
+		<script src="https://unpkg.com/scrollreveal"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="../funciones/calc.js"></script>
     </body>
