--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						<p class="lead">Toca la imagen para que veas más modelos.</p>
   	  			  	</div>
   	  			  	<div class="col-md-5">
-						<a href="./vistas/seccion_escaleras.html"><img id="brincar_1" src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_escaleras.html"><img id="brincar_1" src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
 					</div>
   	  			</div>
@@ -196,7 +196,7 @@
   	  					<p class="lead">Las iguanas deben estar en un ambiente adecuado, preferiblemente en los árboles, no las encierres. Gil.</p>
   	  				</div>
   	  				<div class="col-md-5 order-md-1">
-						<a href="./vistas/seccion_casitas.html"><img id="brincar_2" src="./imagen/productos/casita_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_casitas.html"><img id="brincar_2" src="./imagen/productos/casita_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
   	  				</div>
   	  			</div>
