--- a/index.html
+++ b/index.html
@@ -18,6 +18,44 @@
 
     	<!-- Custom styles for this template -->
     	<link href="./estilos/carousel.css" rel="stylesheet">
+		<style>
+			.banderas{
+				display: flex;
+				width: 20%;
+				justify-content: space-between;
+			}
+    		.eng, .esp, .por{
+    		  width: 50px;
+    		  height: 50px;
+    		  border-radius: 50%;
+    		}
+    		.eng{
+    		  background: url('./imagen/banderas/us.svg');
+    		  background-size: cover;
+    		}
+    		.esp{
+    		  background: url('./imagen/banderas/es.svg');
+			  background-size: cover;
+    		}
+			.por{
+    		  background: url('./imagen/banderas/br.svg');
+			  background-size: cover;
+    		}@media (max-width: 1000px) {
+			  	.banderas{
+					width: 30%;
+				}
+			}
+			@media (max-width: 550px) {
+			  	.banderas{
+					width: 50%;
+				}
+			}
+			@media (max-width: 350px) {
+			  	.banderas{
+					width: 80%;
+				}
+			}
+  		</style>
   	</head>
   	<body>
     	<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -85,6 +123,11 @@
         						<a class="nav-link disabled" aria-disabled="true">No hacer click aquí</a>
         					</li>
         				</ul>
+						<div class="banderas">
+							<button type="button" class="por" title="Portugués" id="por"></button>
+							<button type="button" class="esp" title="Español" id="esp"></button>
+							<button type="button" class="eng" title="Inglés" id="eng"></button>
+						</div>
         				<!--<form class="d-flex" role="search">
         					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         					<button class="btn btn-outline-success" type="submit">Search</button>
@@ -220,6 +263,7 @@
   				<p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   			</footer>
 		</main>
+		<script src="./funciones/traduct.js"></script>
 		<script src="https://unpkg.com/scrollreveal"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
