--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
 				<hr class="featurette-divider">
   	  			<div class="row featurette">
   	  			  	<div class="col-md-7">
-  	  					<h2 class="featurette-heading fw-normal lh-1">Escaleras hechas a medida. <span class="text-body-secondary">Lo mejor para tu mascota.</span></h2>
-  	  					<p class="lead">Imagina a tu mascota subiendo por estas escaleras con una sonrisa de oreja a oreja, a menos que sea una iguana, entonces no.</p>
-						<p class="lead">Toca la imagen para que veas más modelos.</p>
+  	  					<h2 class="featurette-heading fw-normal lh-1">Rampa com Base Plana. <span class="text-body-secondary">Ideal para Casas e apartamentos.</span></h2>
+  	  					<p class="lead">para cães e gatos de todas as idades, especialmente filhotes, idosos ou com mobilidade reduzida.</p>
+						<!--<p class="lead">Toca la imagen para que veas más modelos.</p>-->
   	  			  	</div>
   	  			  	<div class="col-md-5">
-						<a href="./vistas/seccion_escaleras.html"><img id="brincar_1" src="./imagen/productos/escalera_1.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
+						<a href="./vistas/seccion_escaleras.html"><img id="brincar_1" src="./imagen/productos/rampa_8.jpg" alt="prod_1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></a>
   	  					<!--<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>-->
 					</div>
   	  			</div>
