--- a/vistas/seccion_escaleras.html
+++ b/vistas/seccion_escaleras.html
@@ -92,7 +92,7 @@
 		
 		<main>
 			<center>
-            	<h1>Escaleras</h1>
+            	<h1>Rampas</h1>
             	<h2 class="text-center">Descripción detallada del producto</h2>
             	<div class="container">
 					<div class="card">
